refactor: Splitted css for the side and the html output into two files

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>hello-wasm example</title>
         <link rel="stylesheet", type="text/css", href="styles.css">
+        <link rel="stylesheet", type="text/css", href="output-styles/coolName.css">
     </head>
     <body>
         <div class="content">
