feat: Implemented selection to choose css file Html output div scrolls now independently of the parent elements

--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet", type="text/css", href="output-styles/coolName.css">
     </head>
     <body>
+        <div class="header">
+
+        </div>
         <div class="content">
             <div class="input_container">
                 <div>
@@ -20,9 +23,19 @@ Type your markdown here!
                 </div>
             </div>
             <div class="output_container">
+                <div class="frame">
+                    <label for="frame">Style: </label>
+                    <select>
+                        <option value="coolName">Cool Name</option>
+                        <option value="gitHub">GitHub</option>
+                    </select>
+                </div>
                 <div id="html_output">
                 </div>
             </div>
+        </div>
+        <div class="footer">
+
         </div>
         <script src="./index.js"></script>
     </body>
