style: Moved css code for scrolling flex elements to extra class

--- a/site/index.html
+++ b/site/index.html
@@ -30,7 +30,7 @@ Type your markdown here!
                         <option value="gitHub">GitHub</option>
                     </select>
                 </div>
-                <div id="html_output">
+                <div class="scroll_flex_element" id="html_output">
                 </div>
             </div>
         </div>
