feat: Added button for saving contents

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet", type="text/css", href="styles.css">
     </head>
     <body>
+        <button class="button" id="btn_save">Save</button>
+
         <div class="content">
             <div class="input_container">
                 <div>
