--- a/site/index.html
+++ b/site/index.html
@@ -13,13 +13,7 @@
 
         <div class="content">
             <div class="input_container">
-                <textarea id="md_input" rows="20", cols="50">
-# MdCollab
-
----
-
-Type your markdown here!
-                </textarea>
+                <textarea id="md_input" rows="20" cols="50"></textarea>
             </div>
             <div class="output_container">
                 <div class="frame">
