feat: Added html linter

--- a/site/index.html
+++ b/site/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>hello-wasm example</title>
-        <link id="site_css" rel="stylesheet", type="text/css", href="styles.css">
-        <link id="output_css" rel="stylesheet", type="text/css", href="output-styles/coolName.css">
+        <link id="site_css" rel="stylesheet" type="text/css" href="styles.css">
+        <link id="output_css" rel="stylesheet" type="text/css" href="output-styles/coolName.css">
     </head>
     <body>
         <div class="header">
@@ -13,7 +13,7 @@
 
         <div class="content">
             <div class="input_container">
-                <textarea id="md_input" rows="20", cols="50">
+                <textarea id="md_input" rows="20" cols="50">
 # MdCollab
 
 ---
@@ -23,7 +23,7 @@ Type your markdown here!
             </div>
             <div class="output_container">
                 <div class="frame">
-                    <label for="frame">Style: </label>
+                    <label for="output_css_selection">Style: </label>
                     <select id="output_css_selection">
                         <option value="coolName.css">Cool Name</option>
                         <option value="github.css">GitHub</option>
