feat: added button to save html output

--- a/site/index.html
+++ b/site/index.html
@@ -9,6 +9,7 @@
     <body>
         <div class="header">
             <button class="button" id="btn_save">Save</button>
+            <button class="button" id="btn_save_to_html">Save to HTML</button>
         </div>
         <div class="content">
             <div class="input_container">
