feat: added button for file upload to chose markdown file

--- a/site/index.html
+++ b/site/index.html
@@ -9,6 +9,8 @@
     <body>
         <div class="header">
             <button class="button" id="btn_save">Save</button>
+            <button class="button" id="btn_load">Load file</button>
+            <input id="file_picker" type="file" accept="text/markdown, .md" style="display: none;"/>
         </div>
         <div class="content">
             <div class="input_container">
