feat(collab): first draft of using conclavity

--- a/site/index.html
+++ b/site/index.html
@@ -5,14 +5,15 @@
         <title>hello-wasm example</title>
         <link id="site_css" rel="stylesheet" type="text/css" href="styles.css">
         <link id="output_css" rel="stylesheet" type="text/css" href="output-styles/coolName.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/conclavity/dist/conclavity.css" />
     </head>
     <body>
         <div class="header">
             <button class="button" id="btn_save">Save</button>
         </div>
         <div class="content">
-            <div class="input_container">
-                <textarea id="md_input" rows="20" cols="50"></textarea>
+            <div class="input_container" id="conclave">
+                <!--<textarea id="md_input" rows="20" cols="50"></textarea>-->
             </div>
             <div class="output_container">
                 <div class="frame">
@@ -26,6 +27,7 @@
                 </div>
             </div>
         </div>
+        <!--<div id="conclave"></div>-->
         <div class="footer">
 
         </div>
